# ledger-rust-eip712

./: Cargo.toml  README.md
res/: mail.json
src/: consts.rs  eip712.rs  eip712_filter.rs  lib.rs  parser.rs  test_utils.rs  types.rs  utils.rs
